Added Moon Type Class and edited files accordingly

--- a/templates/registration.html
+++ b/templates/registration.html
@@ -16,10 +16,10 @@
     Enter your password:
     <input type='text' name = 'password'><br>
     Which text alerts would you like to receive?
-    <input type="checkbox" name="moon_phases" value="new_moon">New Moon
-    <input type="checkbox" name="moon_phases" value="first_quarter">First Quarter
-    <input type="checkbox" name="moon_phases" value="last_quarter">Last Quarter
-    <input type="checkbox" name="moon_phases" value="full_moon">Full Moon
+    <input type="checkbox" name="moon_phases" value="New Moon">New Moon
+    <input type="checkbox" name="moon_phases" value="First Quarter">First Quarter
+    <input type="checkbox" name="moon_phases" value="Last Quarter">Last Quarter
+    <input type="checkbox" name="moon_phases" value="Full Moon">Full Moon
     <input type="submit">
 </form>
 
