Fixed bugs with send_sms file

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -48,6 +48,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 <script type="text/javascript">
 function example_1(moon){
+    console.log(moon)
     var day = new Date().getDate()
     var dayWeek=moon.phase[day].dayWeek
     var html="<div class='moon'>"
