--- a/templates/registration.html
+++ b/templates/registration.html
@@ -15,11 +15,13 @@
     <input type='text' name ='email'>
     Enter your password:
     <input type='text' name = 'password'><br>
-    Which text alerts would you like to receive?
-    <input type="checkbox" name="moon_phases" value="New Moon">New Moon
-    <input type="checkbox" name="moon_phases" value="First Quarter">First Quarter
-    <input type="checkbox" name="moon_phases" value="Last Quarter">Last Quarter
-    <input type="checkbox" name="moon_phases" value="Full Moon">Full Moon
+    Which text alerts would you like to receive?<br>
+    {% for moon_phase_type in moon_phase_types %}
+        <input type="checkbox" name="moon_phases" value="{{ moon_phase_type }}"> {{ moon_phase_type.title }} <br>
+    {% endfor %}
+    {% for full_moon_nickname in full_moon_nicknames %}
+        <input type="checkbox" name="full_moon_nicknames" value="{{ full_moon_nickname }}">{{ full_moon_nickname.title }} <br>
+    {% endfor %}
     <input type="submit">
 </form>
 
