fixed registration and change settings forms with full moon nicknames

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -16,17 +16,17 @@
     <input type='text' name ='email' value = '{{ user.email }}' disabled>
     Texts:<br>
     {% for moon_phase in moon_phases %}
-        {% if moon_phase.moon_phase_type_id in user_moon_alerts %}
-            <input type="checkbox" name="moon_phases" value="{{ moon_phase.title }}" checked disabled>{{ moon_phase.title }}<br>
+        {% if moon_phase.moon_phase_type_id in moon_phase_type_alerts %}
+            <input type="checkbox" name="moon_phases" value="{{ moon_phase.moon_phase_type_id }}" checked disabled>{{ moon_phase.title }}<br>
         {% else %}
-            <input type="checkbox" name="moon_phases" value="{{ moon_phase.title }}" disabled>{{ moon_phase.title }}<br>
+            <input type="checkbox" name="moon_phases" value="{{ moon_phase.moon_phase_type_id }}" disabled>{{ moon_phase.title }}<br>
         {% endif %}
     {% endfor %}
     {% for full_moon_nickname in full_moon_nicknames %}
-        {% if full_moon_nickname.full_moon_nickname_id in user_moon_alerts %}
-            <input type="checkbox" name="full_moon_nicknames" value="{{ full_moon_nickname.title }}" checked disabled>{{ full_moon_nickname.title }}<br>
+        {% if full_moon_nickname.full_moon_nickname_id in full_moon_nickname_alerts %}
+            <input type="checkbox" name="full_moon_nicknames" value="{{ full_moon_nickname.full_moon_nickname_id }}" checked disabled>{{ full_moon_nickname.title }}<br>
         {% else %}
-            <input type="checkbox" name="full_moon_nicknames" value="{{ full_moon_nickname.title }}" disabled>{{ full_moon_nickname.title }}<br>
+            <input type="checkbox" name="full_moon_nicknames" value="{{ full_moon_nickname.full_moon_nickname_id }}" disabled>{{ full_moon_nickname.title }}<br>
         {% endif %}
     {% endfor %}
 <button type="button" class="change-settings">Change settings</button>
