--- a/templates/registration.html
+++ b/templates/registration.html
@@ -17,10 +17,10 @@
     <input type='text' name = 'password'><br>
     Which text alerts would you like to receive?<br>
     {% for moon_phase_type in moon_phase_types %}
-        <input type="checkbox" name="moon_phases" value="{{ moon_phase_type }}"> {{ moon_phase_type.title }} <br>
+        <input type="checkbox" name="moon_phases" value="{{ moon_phase_type.title }}"> {{ moon_phase_type.title }} <br>
     {% endfor %}
     {% for full_moon_nickname in full_moon_nicknames %}
-        <input type="checkbox" name="full_moon_nicknames" value="{{ full_moon_nickname }}">{{ full_moon_nickname.title }} <br>
+        <input type="checkbox" name="full_moon_nicknames" value="{{ full_moon_nickname.title }}">{{ full_moon_nickname.title }} <br>
     {% endfor %}
     <input type="submit">
 </form>
