Added fullcalendar css script tags to base html

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,10 @@
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
+    <script src = node_modules/@fullcalendar/core/main.css></script>
+    <script src = node_modules/@fullcalendar/daygrid/main.css></script>
+    <script src =node_modules/@fullcalendar/timegrid/main.css></script>
+    <script src =node_modules/@fullcalendar/list/main.css></script>
 </head>
 <body>
 <header>
