Work in progress: display default fullcalendar on homepage

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,16 @@
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
-    <script src = node_modules/@fullcalendar/core/main.css></script>
-    <script src = node_modules/@fullcalendar/daygrid/main.css></script>
-    <script src =node_modules/@fullcalendar/timegrid/main.css></script>
-    <script src =node_modules/@fullcalendar/list/main.css></script>
-</head>
+    <link href='/node_modules/@fullcalendar/core/main.css' rel='stylesheet' />
+    <link href='/node_modules/@fullcalendar/daygrid/main.css' rel='stylesheet' />
+    <link href='/node_modules/@fullcalendar/timegrid/main.css' rel='stylesheet' />
+    <link href='/node_modules/@fullcalendar/interaction/main.css' rel='stylesheet' />
+    <script src='/static/calendar.js'></script>
+
+    <script src='/node_modules/fullcalendar/core/main.js'></script>
+    <script src='/node_modules/fullcalendar/daygrid/main.js'></script>
+    <script src='/node_modules/fullcalendar/timeGrid/main.js'></script>
+    <script src='/node_modules/fullcalendar/interaction/main.js'></script>
 <body>
 <header>
     <div class = "container">
