Work in progress: Full calendar

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,9 +3,10 @@
 
 <h1>Moon Phase Tracker</h1>
 
+<script src='/static/calendar.js'></script>
 <div id="ex1"></div>
-
-<div id='calendar'></div>
+<div id='calendar'>
+</div>
 
 <script type="text/javascript">     
     
