--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link href='static/fullcalendar/packages/daygrid/main.css' rel='stylesheet'/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel='stylesheet' href='/static/style.css'/>
+    <link href='static/homepage.css' rel='stylesheet'/>
 
 
     <script src='static/fullcalendar/packages/core/main.js'></script>
@@ -21,25 +22,26 @@
 
 <body>
 <header>
-    <div class = "container">
-        <nav>
-            <ul>
-                <li><a href="/">Homepage</a></li>
-                <li>{% if "email" in session %}</li>
+    {% if "email" in session%}
+        <div class = "container">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="/calendar">Moon phase calendar</a>
+                    </li>
+                    <li>
                         <a href="/display-settings">Manage settings</a>
-                    {% else %}
-                        <a href="/register">Sign up for alerts</a>
-                    {% endif %}
-                </li>
-                <li> {% if "email" not in session %}
-                        <a href="/login">Log in</a>
-                    {% else %}
-                        <a href="/logout">Log out</a>
-                    {% endif %}
-                </li>
-            </ul>
-        </nav>
-    </div>
+                    </li>
+                    <li> {% if "email" not in session %}
+                            <a href="/login">Log in</a>
+                        {% else %}
+                            <a href="/logout">Log out</a>
+                        {% endif %}
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    {% endif %}
 </header>
 
     {% with messages = get_flashed_messages() %}
