Added popovers on registration form

--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -8,6 +8,8 @@
 <div id="moonphasetoday"></div>
 <div id='calendar'></div>
 
+<link rel='stylesheet' href='/static/style.css'/>
+
 <script src='static/moon_phase_today.js'></script>
 <script src='static/calendar.js'></script>
 
