--- a/templates/registration.html
+++ b/templates/registration.html
@@ -2,25 +2,58 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Register Form</h1>
-
+<h3>Complete the form below to sign up for texts and gain access</h3>
+<br>
 <form action="/process-registration" method="POST">
-    Enter your first name:
+    First name:
     <input type='text' name ='fname'>
-    Enter your last name:
+    <br>
+    <br>
+    Last name:
     <input type='text' name ='lname'>
-    Enter your phone number:
+    <br>
+    <br>
+    Phone number:
     <input type='text' name ='phone'>
+    <br>
     <br>
     Which text alerts would you like to receive?
     <br>
-    {% for moon_phase_type in moon_phase_types %}
-        <input type="checkbox" name="moon_phases" value="{{ moon_phase_type.title }}"> {{ moon_phase_type.title }} <br>
-    {% endfor %}
-    {% for full_moon_nickname in full_moon_nicknames %}
-        <input type="checkbox" name="full_moon_nicknames" value="{{ full_moon_nickname.title }}">{{ full_moon_nickname.title }} <br>
-    {% endfor %}
+    <div class="moon_phase_checkboxes">
+        <h5>Moon Phases</h5>
+        {% for moon_phase_type in moon_phase_types %}
+            <input type="checkbox" name="moon_phases" value="{{ moon_phase_type.title }}"> {{ moon_phase_type.title }}
+            <button type="button" class="btn" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">
+                <span class="glyphicon glyphicon-question-sign"></span>
+            </button>
+            <br>
+        {% endfor %}
+        <h5>Specific Full Moons</h5>
+        {% for full_moon_nickname in full_moon_nicknames %}
+            <input type="checkbox" name="full_moon_nicknames" value="{{ full_moon_nickname.title }}"> {{ full_moon_nickname.title }}
+            <button type="button" class="btn" data-toggle="popover" title="Popover title" data-content="And here's some amazing content. It's very engaging. Right?">
+                <span class="glyphicon glyphicon-question-sign"></span>
+            </button>
+            <br>
+        {% endfor %}
+    </div>
     <input type="submit">
+
 </form>
+
+<style>
+    .popover.show {
+    opacity: 1;
+}
+</style>
+
+<script>
+$(document).ready(function() {
+    $('[data-toggle="popover"]').popover({
+        trigger:'click',
+        opacity: 1
+    });
+});
+</script>
 
 {% endblock %}
