--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <h1>Moon Phase Tracker</h1>
-<h4 id="subheading">Receive personalized text alerts for moon phases</h4>
+<h4 class="subheading">Receive personalized text alerts for moon phases</h4>
 <br>
 <h4 class="moonphasetodaytitle">Today's moon phase:</h4>
 <div id="moonphasetoday"></div>
