--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -6,6 +6,9 @@
 <h4 class="moonphasetodaytitle">Today's moon phase:</h4>
 
 <div id="moonphasetoday"></div>
+
+<h5 class="subheading">Click on any moon phase below to add to your own Google calendar!</h5>
+
 <div id='calendar'></div>
 
 <link rel='stylesheet' href='/static/style.css'/>
