--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link href='static/fullcalendar/packages/daygrid/main.css' rel='stylesheet'/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href='static/homepage.css' rel='stylesheet'/>
+    <link href="/static/favicon.ico" rel="icon" type="image/x-icon"/>
 
 
     <script src='static/fullcalendar/packages/core/main.js'></script>
