--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Moon Phase Tracker</h1>
+<h4 class="moonphasetodaytitle">Today's moon phase:</h4>
+<div id="moonphasetoday"></div>
 
 <h5 class="subheading">Click on any moon phase below to add to your own Google calendar!</h5>
 
 <div id='calendar'></div>
 
-<link rel='stylesheet' href='/static/style.css'/>
+<link rel='stylesheet' href='/static/tooltips.css'/>
 
 <script src='static/moon_phase_today.js'></script>
 <script src='static/calendar.js'></script>
