--- a/templates/calendar.html
+++ b/templates/calendar.html
@@ -1,10 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h4 class="moonphasetodaytitle">Today's moon phase:</h4>
-<div id="moonphasetoday"></div>
-
-<h5 class="subheading">Click on any moon phase below to add to your own Google calendar!</h5>
+<h5 class="subheading">Click on any moon phase below to add to your own Google calendar</h5>
+<br>
 
 <div id='calendar'></div>
 
